add end time to display and sound api action
