# src/enamour/core/openapi.yaml
@@ -14,6 +14,28 @@ paths:
       responses:
         200:
           description: (No actual responses will be sent)
+  /display:
+    description: The display action that should be displayed
+    post:
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/DisplayResponse'
+      responses:
+        200:
+          description: (No actual responses will be sent)
+  /sound:
+    description: The sound action that should be played
+    post:
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/SoundResponse'
+      responses:
+        200:
+          description: (No actual responses will be sent)
 
 components:
   schemas:
@@ -54,9 +76,14 @@ components:
           pose: '#/components/schemas/PoseAction'
           group: '#/components/schemas/ActionGroup'
       properties:
-        start_time:
+        start_ms:
           type: number
           nullable: false
+          description: "Start time of action within an action group in milliseconds"
+        end_ms:
+          type: number
+          nullable: true
+          description: "End time of action within an action group in milliseconds"
 
 
     # All possible types of actions
@@ -95,6 +122,10 @@ components:
           type: string
           enum:
             - sound
+        name:
+          type: string
+          nullable: false
+          example: "bark"
     DisplayAction:
       type: object
       required:
@@ -105,6 +136,10 @@ components:
           type: string
           enum:
             - display
+        name:
+          type: string
+          nullable: false
+          example: "happy"
     NavigationAction:
       type: object
       required:
@@ -125,19 +160,35 @@ components:
           type: string
           enum:
             - pose
-        x:
+        roll:
           nullable: true
-        y:
+        pitch:
           nullable: true
-        z:
+        yaw:
           nullable: true
-        ax:
-          nullable: true
-        ay:
-          nullable: true
-        az:
-          nullable: true
-        end_time:
-          nullable: true
-          type: number
 
+    DisplayResponse:
+      type: object
+      properties:
+        name:
+          type: string
+          nullable: false
+          example: "happy"
+        duration_ms:
+          type: number
+          nullable: true
+          example: 1000
+          description: "Duration of the action in milliseconds if end time was specified"
+
+    SoundResponse:
+      type: object
+      properties:
+        name:
+          type: string
+          nullable: false
+          example: "bark"
+        duration_ms:
+          type: number
+          nullable: true
+          example: 1000
+          description: "Duration of the action in milliseconds if end time was specified"
